{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 29,
  "lineage": "bd498ecb-f923-5bdf-2aea-1d24ed10da8a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-04cdd159f231d89ae",
            "owner_id": "750461308246",
            "tags": {
              "ManagedBy": "terraform",
              "Project": "k8s"
            },
            "vpc_id": "vpc-02a5c81789fddc620"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-038853e1e74bad6b8",
            "owner_id": "750461308246",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04cdd159f231d89ae",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Project": "k8s"
            },
            "vpc_id": "vpc-02a5c81789fddc620"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a77b0bf6e268a57f",
            "route_table_id": "rtb-038853e1e74bad6b8",
            "subnet_id": "subnet-0d78ca82c2868be5f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0025c99b97399aa43",
            "route_table_id": "rtb-038853e1e74bad6b8",
            "subnet_id": "subnet-003d7630b0f2437c6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750461308246:security-group/sg-0f2a269989f7fdc38",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2a269989f7fdc38",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00749932ff354e4a4"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "kubernetes-eks",
            "name_prefix": null,
            "owner_id": "750461308246",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Project": "k8s"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a5c81789fddc620"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750461308246:security-group/sg-00749932ff354e4a4",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00749932ff354e4a4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f2a269989f7fdc38"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "kubernetes-eks-node",
            "name_prefix": null,
            "owner_id": "750461308246",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Project": "k8s",
              "kubernetes.io/cluster/var.aws_cluster_name": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a5c81789fddc620"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-ingress-node-https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-736896439",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f2a269989f7fdc38",
            "self": false,
            "source_security_group_id": "sg-00749932ff354e4a4",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cluster",
            "aws_security_group.node",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-ingress-workstation-https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3365211591",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f2a269989f7fdc38",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-node-ingress-cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2224672087",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00749932ff354e4a4",
            "self": false,
            "source_security_group_id": "sg-0f2a269989f7fdc38",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.cluster",
            "aws_security_group.node",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-node-ingress-self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3617814355",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00749932ff354e4a4",
            "self": false,
            "source_security_group_id": "sg-00749932ff354e4a4",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.node",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750461308246:subnet/subnet-0d78ca82c2868be5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0d78ca82c2868be5f",
            "map_public_ip_on_launch": false,
            "owner_id": "750461308246",
            "tags": {
              "ManagedBy": "terraform",
              "Project": "k8s",
              "kubernetes.io/cluster/var.aws_cluster_name": "shared"
            },
            "vpc_id": "vpc-02a5c81789fddc620"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750461308246:subnet/subnet-003d7630b0f2437c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-003d7630b0f2437c6",
            "map_public_ip_on_launch": false,
            "owner_id": "750461308246",
            "tags": {
              "ManagedBy": "terraform",
              "Project": "k8s",
              "kubernetes.io/cluster/var.aws_cluster_name": "shared"
            },
            "vpc_id": "vpc-02a5c81789fddc620"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750461308246:vpc/vpc-02a5c81789fddc620",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00ac2e14ba0075bfe",
            "default_route_table_id": "rtb-05d48c73a4bf40e3a",
            "default_security_group_id": "sg-03d0c8fad545f0968",
            "dhcp_options_id": "dopt-0a467ac9524009528",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02a5c81789fddc620",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05d48c73a4bf40e3a",
            "owner_id": "750461308246",
            "tags": {
              "ManagedBy": "terraform",
              "Project": "eks",
              "kubernetes.io/cluster/var.aws_cluster_name": "shared"
            }
          }
        }
      ]
    }
  ]
}